--- a/external/style.css
+++ b/external/style.css
@@ -12,7 +12,7 @@ h1 {
   font-size: 1.5rem;
 }
 div.test {
-  border: 1px dashed red;
+  -border: 1px dashed red;
   height: auto;
 }
 span {
@@ -49,7 +49,7 @@ span {
 
 .wrapper {
   display: grid;
-  border: 1px solid brown;
+  -border: 1px solid brown;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto 1fr;
   grid-template-areas:
